aligning issue

--- a/FleetUI/src/app/configuration/Addons/general/general.component.css
+++ b/FleetUI/src/app/configuration/Addons/general/general.component.css
@@ -16,6 +16,7 @@
 
 .field {
   margin-bottom: 15px;
+  display: flex;
 }
 
 
@@ -51,7 +52,7 @@ label {
 
 ::ng-deep .p-dropdown{
   width: 10rem;
-  height: 3rem;
+  /* height: 3rem; */
 }
 
 input[type="text"],
